<resources>
    <string name="app_name">Mobile_Project_1</string>
    <string name="edit_message">Enter a message</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dining">DINING</string>
    <string name="meal_to_be_displayed_here">Meal to be displayed here</string>
    <string name="username">user</string>
    <string name="password">pswd</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_fail">Wrong username and password. Please try again</string>

</resources>
